<resources>
    <string name="app_name">First - Degree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficent_a">Coefficent a:</string>
    <string name="title_coefficient_b">Coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_resuluts">Results:</string>
    <string name="title_infinity">Infinity!</string>
    <string name="title_nosolution">No solution!</string>
    <string name="title_language">Language</string>
    <string name="title_language1">English</string>
    <string name="title_language2">Vietnamese</string>
    <string name="title_language3">French</string>
    <string name="title_language4">Spanish</string>
</resources>