<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_coefficent_a" />

    <EditText
        android:id="@+id/edtCoefficientA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_coefficient_b" />

    <EditText
        android:id="@+id/edtCoefficientB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="do_solution"
            android:id="@+id/btnSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_solution" />

        <Button
            android:onClick="do_next"
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_next" />

        <Button
            android:onClick="do_exit"
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_resuluts" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEB3B" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_language" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_language1" />

        <Button
            android:id="@+id/btn_vi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_language2" />

        <Button
            android:id="@+id/btn_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_language3" />

        <Button
            android:id="@+id/btn_es"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_language4" />

    </LinearLayout>

</LinearLayout>